# codesumm

./: .env.example  .gitignore  LICENSE  README.md  config.py  config.yaml  file_utils.py  llm.py  logger.py  main.py  prompts.py  pyproject.toml  requirements.txt  summarizer.py  traversal.py  writer.py
.summaries/: summary.md
.summaries/src/: summary.md
.summaries/src/codesumm/: summary.md
src/codesumm/: __main__.py  cli.py  config.py  file_utils.py  llm.py  logger.py  main.py  summarizer.py  traversal.py  writer.py
